# ProyectoBdd

mi_proyecto_bdd/: adidad_page.py  main.py  pyproject.toml
mi_proyecto_bdd/features/: product.feature
mi_proyecto_bdd/steps/: steps.py
mi_proyecto_bdd/tests/: test_adidas.py
