[tool.poetry]
name = "mi-proyecto-bdd"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "mi_proyecto_bdd"}]

[tool.poetry.dependencies]
python = "^3.9"
selenium = "^4.9.1"
behave = "^1.2.6"
expects = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
